# gnome-controller

./: .env.dev  .env.prod  .gitignore  README.md  package-lock.json  package.json  vite.config.ts
agent/: __init__.py  core.py
agent/adapters/: dev.py  prod.py
agent/llms/: anthropic.py  openai.py
cdk/: package-lock.json  package.json
cdk/lib/: config.ts  controller-pipeline-stack.ts
cdk/lib/constructs/: python-lambda.ts
cdk/lib/stacks/: backend-stack.ts  backtest-stack.ts  collector-ecs-stack.ts  collector-regional-stack.ts  collector-stack.ts  database-stack.ts  frontend-stack.ts  latency-probe-stack.ts  monitoring-stack.ts  slack-stack.ts
dev/: .env.example  playground.py  playground_github.py  playground_worktree.py  pyproject.toml  server.py  setup_env.sh
src/: App.css  App.tsx  amplify-config.ts  main.tsx  theme.tsx
src/components/Navbar/: Navbar.module.css  Navbar.tsx
src/components/NavbarLinksGroup/: NavbarLinksGroup.tsx
src/components/UserButton/: UserButton.tsx
src/context/: GlobalStateContext.tsx
src/pages/Agent/: AgentPage.tsx
src/pages/Backtests/: BacktestDetail.tsx  BacktestList.tsx  BacktestPresets.tsx  BacktestSubmit.tsx
src/pages/CollectorDetail/: CollectorDetail.tsx
src/pages/LatencyProbe/: LatencyProbe.tsx
src/pages/MarketData/: MarketData.tsx
src/pages/Playground/: PlaygroundPage.tsx
src/types/: backtests.ts  coverage.ts  gaps.ts  index.ts  latency-probe.ts  quality-issues.ts  regions.ts  registry.ts  schema.ts  security-master.ts  transform-jobs.ts
src/utils/: api.ts  security-master.ts
(+46 files in other folders)
