[tool.poetry]
name = "gnome-controller-dev"
version = "0.1.0"
description = "Local dev server for gnome-controller backtest endpoints"
packages = [{include = "server.py"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = ">=0.115"
uvicorn = {version = ">=0.30", extras = ["standard"]}
boto3 = ">=1.34"
anthropic = ">=0.40"
requests = ">=2.31"
jpype1 = "1.5.0"
gnomepy = { path = "../../gnomepy", develop = true }
gnomepy-research = { path = "../../gnomepy-research", develop = true }

[tool.poetry.scripts]
dev-server = "server:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
